...
    <string name="dialog_og_text">Applicazione sviluppata da un idea di Francesco Bevilacqua, fondatore e admin di www.opengeek.it .\nPotete seguirne l\'evoluzione sulla pagina ufficiale di Google+!</string>
    <string name="dialog_bp_text">Realizzazione grafica, ottimizzazione, pubblicazione e promozione di Purple Soc. Coop. www.bitpurple.com .</string>
    <string name="dialog_disclaimer_text">Tutti i marchi, i loghi e i simboli presenti nell\'applicazione sono dei rispettivi proprietari.\nPurple Soc. Coop. non è in alcun modo affiliata ai siti utilizzati come feed di informazioni.\nL\'applicazione è da intendersi come metodo aggiuntivo per la fruizione dei contenuti diffusi dai rispettivi proprietari.</string>
    <string name="dialog_changelog_title_text">Changelog</string>
    <string name="dialog_changelog_text"><i>2.2</i>\n&#8195;&#8226;&#8195;Applicazione completamente creata con Kotlin\n&#8195;&#8226;&#8195;Aggiornata la ricerca dei fumetti\n<i>2.1</i>\n&#8195;&#8226;&#8195;Miglioramenti al codice e bugfix\n<i>2.0</i>\n&#8195;&#8226;&#8195;Codice aggiornato ad Android 8.1\n&#8195;&#8226;&#8195;Migliorata la grafica delle liste\n&#8195;&#8226;&#8195;Bug fix\n<i>1
    <string name="dialog_libraries_title_text">Librerie</string>
    <string name="dialog_rate_text">Comics Checklist non usa nessun banner pubblicitario, è completamente gratuita e non richiede permessi invasivi.\nSe l\'applicazione ti è stata utile lascia un commento su Google Play.\nGrazie per il tuo supporto!</string>
    <string name="dialog_rate_button">Recensisci ora!</string>
    <string name="dialog_late_button">Più tardi</string>
    <string name="dialog_confirm_button">OK</string>
    <string name="dialog_undo_button">Annulla</string>
    <string name="dialog_no_thanks_button">No, grazie</string>
    <string name="dialog_author_title_text">Autore</string>
...
    <string name="comic_deleted_favorite">Fumetto tolto dalla lista dei preferiti.</string>

    <string name="toast_no_connection">Problema alla connessione di rete: verifica la tua connettività.</string>

    <string name="empty_list">La lista è vuota!</string>
    <string name="empty_favorite_list">La lista dei preferiti non è ancora stata creata!\nCerca le tue collane preferite tra gli editori disponibili dal menu laterale.</string>
    <string name="empty_cart_list">Nessun fumetto da comprare!\nPuoi crera una nota cliccando sul tasto <b>aggiungi</b>.</string>
    <string name="empty_editor_list">La lista per questo editore è vuota!\nPuoi effettuare una ricerca in rete con uno <i>swipe</i> verso il basso.</string>

    <string name="search_started">: ricerca in corso&#8230;</string>
    <string name="search_editor_completed">: ricerca completata.</string>

    <string name="description_background">This is the background image.</string>
...
